tests/expectations/compiler/const_generics/const_generic_shadows_global_constant_fail.out
Error [EAST0372017]: The name `N` is defined multiple times.
    --> compiler-test:7:18
     |
   6 |       const N: u32 = 5;
     |             ^ previous definition of `N` here
   7 |       inline foo::[N: u32]() {}
     |                    ^ `N` redefined here
